' Generated by UML Generator
' Encoded: hLGzRy8m4DtpAomc40hgZDIA0fNQWQLHrQ7gu3X7i9Bu8jkXAfJ-zjen99WIAbLiz_NkxjsBCr6QIbqLUQ0oBaegQK5OJfMwrrhokDBmn514V0Fa9bZn10ZZakKG17KLcLEPFIDLccm3GeQDsnzObw6rnYJ1AZQOtG7re4e9Ig437RpBc4Ui54np48b3jNuNZiPAIygq8qIci0P9KwZXtmae9dcfEOenYGnNaP9RqdiHcS0FqHJtJ6qOslufw7cBiPCSwjBESs1qkR-CDIypZ8mKSRNPp72v1BVcS6lqqPpjI46vw5EPgiFSjtVJOeqyQHiiU9uvcBNwyPx3k64p-2-H23zTOsDSf--9E3CK2Iz0c1OCRHobq-dtiByLQTP-NV7IxMsjQnvaWMn5zxUsvdLwjwyf3B_kMiRDU_73Hq_2JxZlpe_L7qSTEdDhbnsDZkgjv9tbDkbLdzFFdt--ugYW5gjpOftrHZe9kXdLQGynCPSolxeV
' URL: http://www.plantuml.com/plantuml/uml/hLGzRy8m4DtpAomc40hgZDIA0fNQWQLHrQ7gu3X7i9Bu8jkXAfJ-zjen99WIAbLiz_NkxjsBCr6QIbqLUQ0oBaegQK5OJfMwrrhokDBmn514V0Fa9bZn10ZZakKG17KLcLEPFIDLccm3GeQDsnzObw6rnYJ1AZQOtG7re4e9Ig437RpBc4Ui54np48b3jNuNZiPAIygq8qIci0P9KwZXtmae9dcfEOenYGnNaP9RqdiHcS0FqHJtJ6qOslufw7cBiPCSwjBESs1qkR-CDIypZ8mKSRNPp72v1BVcS6lqqPpjI46vw5EPgiFSjtVJOeqyQHiiU9uvcBNwyPx3k64p-2-H23zTOsDSf--9E3CK2Iz0c1OCRHobq-dtiByLQTP-NV7IxMsjQnvaWMn5zxUsvdLwjwyf3B_kMiRDU_73Hq_2JxZlpe_L7qSTEdDhbnsDZkgjv9tbDkbLdzFFdt--ugYW5gjpOftrHZe9kXdLQGynCPSolxeV
' Generated on: 2025-12-07T20:19:42.097228

@startuml
skinparam classAttributeIconSize 0
hide circle

class DarkRoast {
  +DarkRoast()
  +cost(): double
}

class Espresso {
  +Espresso()
  +cost(): double
}

class HouseBlend {
  +HouseBlend()
  +cost(): double
}

abstract class Beverage {
  ~description: String = "Unknown Beverage"
  --
  +getDescription(): String
  +cost(): double
}

class Decaf {
  +Decaf()
  +cost(): double
}

class StarbuzzCoffee {
  +{static} main(args: String[]): void
}

class Milk {
  +Milk(beverage: Beverage)
  +getDescription(): String
  +cost(): double
}

class Soy {
  +Soy(beverage: Beverage)
  +getDescription(): String
  +cost(): double
}

abstract class CondimentDecoractor {
  ~beverage: Beverage
  --
  +getDescription(): String
}

class Whip {
  +Whip(beverage: Beverage)
  +getDescription(): String
  +cost(): double
}

class Mocha {
  +Mocha(beverage: Beverage)
  +getDescription(): String
  +cost(): double
}

DarkRoast --|> Beverage
Espresso --|> Beverage
HouseBlend --|> Beverage
Decaf --|> Beverage
Milk --|> CondimentDecoractor
Milk ..> Beverage
Soy --|> CondimentDecoractor
Soy ..> Beverage
CondimentDecoractor --|> Beverage
CondimentDecoractor --> Beverage
Whip --|> CondimentDecoractor
Whip ..> Beverage
Mocha --|> CondimentDecoractor
Mocha ..> Beverage
@enduml